refactor: agent execute flow and remove redundancy
Signed-off-by: Pavan Yekbote <pybot@amazon.com>